final fixed the alignment problem

--- a/Web Application/Frontend/Postpage/style.css
+++ b/Web Application/Frontend/Postpage/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 textarea {
-
+    box-sizing: border-box;
     width: 100%;
     font-size: 21px;
     font-family: Poppins, Roboto, Arial, Helvetica, sans-serif;
@@ -53,7 +53,10 @@ textarea {
 }
 
 #submit {
-    display: table-cell;
-    vertical-align: bottom;
+    vertical-align: baseline;
+    padding-top: 500px;
+    padding-left: 10%;
+    padding-right: auto;
     width: 100%;
+
 }
